[package]
name = "status-upstream"
version = "0.8.0-alpha.2"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
axum-auth = "0.8"
axum-server = "0.8"
clap = "4"
env_logger = { version = "0.11", optional = true }
futures-util = { version = "0.3", optional = true }
hex-literal = "1"
hyper = { version = "1", features = ["http2"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
log4rs = { version = "1", optional = true }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "socks",
    "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
spdlog-rs = { version = "0.5", features = [
    "level-trace",
    "release-level-debug",
    "log",
], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-icmp-echo = { version = "0.4.0", optional = true }
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

[profile.release]
opt-level = 3
panic = "abort"

[profile.release-lto]
inherits = "release"
lto = true

[features]
default = ["log-crate", "ping"]
log-crate = ["log4rs", "env_logger"]
ping = ["tokio-icmp-echo", "futures-util"]
