[package]
name = "status-upstream"
version = "0.8.0-beta"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", optional = true }
hex-literal = "1"
ipnet = "2"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-icmp-echo = { version = "0.4.0", optional = true }
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
panic = "abort"

[profile.release-lto]
inherits = "release"
lto = true

[features]
default = []
ping = ["tokio-icmp-echo", "futures-util"]
